# CUDA_CONV_CNN

./: .gitignore  CMakeLists.txt  README.md  environment.yml  mlp_test.py  packer.py  project_code_summary.txt  project_export.xml  requirements.txt  run.sh  run_cnn.py  run_resnet.py  run_vgg.py  setup_env.sh  test.py
cuda_src/: activations.cu  activations.h  conv_layer.cu  conv_layer.h  elementwise.cu  elementwise.h  layers.cu  layers.h  project_code_summary.txt  tensor.cu  tensor.h
models/: simple_cnn.py
pybind/: pybind_wrapper.cpp
python/: __init__.py  utils.py
python/core/: __init__.py  basic_operator.py  device.py
python/cuda_ops/: __init__.py  activations.py  conv.py  linear.py  pooling.py
python/data/: __init__.py  dataloader.py  imagenet.py
python/nn/: __init__.py  activations.py  batchnorm.py  conv.py  linear.py  loss.py  module.py  packcode.py  pooling.py  project_code_summary.txt
python/optim/: adam.py  sgd.py
train/: train_cifar10.py  train_resnet_imagenet.py  train_vgg_cifar10.py
